# petsard

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yml  pyproject.toml  requirements.txt  test_benchmark_adapter.py
.ai/: README.md  SETUP-GUIDE.md  development-workflow.md  github-actions-guide.md
.ai/roo-config/: architecture-rules.md  project-context.md
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: coverage_report.py
.github/workflows/: ai-assisted-development.yml  image-publish.yml  pages.yaml  semantic-release-pypi.yml  semantic-release.yml  test-suite.yml  trivy-sbom-gen.yml  trivy-vuln-scan.yml
.release/: README.md  v1.8.0-rc.1.md
.release/docker/: README.md
.roo/: project.yaml
.roo/rules/: {rule}.md
demo/: README.md  demo_utils.py  dev_manual_test_api.ipynb  dev_manual_test_api_adpt.ipynb  example_precision_schema.yaml
demo/20251113_資料司 PETsARD 教育訓練/: 20251020_nics_petsard_tutorial_in_skl_data.ipynb
demo/best-practices/: categorical.ipynb  high-cardinality.ipynb  multi-table.ipynb  multi-timestamp.ipynb
demo/developer-guide/: experiment-name-in-reporter.ipynb  logging-configuration.ipynb  mpuccs.ipynb
demo/getting-started/: 1.r  default-synthesis-default-evaluation.ipynb  default-synthesis-default-evaluation.yaml  default-synthesis.ipynb  default-synthesis.yaml  external-synthesis-default-evaluation.ipynb  external-synthesis-default-evaluation.yaml
demo/installation/: petsard_wheel_downloader.py
demo/petsard-yaml/constrainer-yaml/: adult-income_constraints.yaml  adult-income_constraints_field_combinations.yaml  adult-income_constraints_field_constraints.yaml  adult-income_constraints_field_proportions.yaml  adult-income_constraints_nan_groups.yaml  constrainer.ipynb  constrainer.yaml  constrainer_field_combinations.ipynb  constrainer_field_constraints.ipynb  constrainer_field_constraints.yaml  constrainer_field_proportions.ipynb  constrainer_field_proportions.yaml  constrainer_nan_groups.ipynb  constrainer_nan_groups.yaml  resample-mode_external-constraints-file.yaml  resample-mode_inline_constraints_configuration.yaml  validate-mode_multiple-data-sources.yaml  validate-mode_single-data-source.yaml
demo/petsard-yaml/describer-yaml/: describer-compare.yaml  describer-custom-compare.yaml  describer-describe.yaml  describer.ipynb
demo/petsard-yaml/evaluator-yaml/: custom-evaluation.ipynb  custom-evaluation.yaml  diagnostic.ipynb  diagnostic.yaml  evaluator-data-release.yaml  evaluator-specific-task-application.yaml  evaluator.ipynb  fidelity.ipynb  fidelity.yaml  inference-risk.yaml  privacy-inference-risk.yaml  privacy-linkability-risk.yaml  privacy-mpuccs.ipynb  privacy-mpuccs.yaml  privacy-singling-out-risk.yaml  privacy.ipynb  quality.ipynb  quality.yaml  utility-classification.ipynb  utility-classification.yaml  utility-clustering.ipynb  utility-clustering.yaml  utility-regression.ipynb  utility-regression.yaml
demo/petsard-yaml/loader-yaml/: basic-loading.yaml  benchmark-protocol.ipynb  loader-yaml.ipynb  loading-benchmark-dataset-with-benchmark-schema.yaml  loading-benchmark-dataset.yaml  multiple-data-loading.yaml  using-schema-file.yaml  using-with-local-schema.yaml
demo/petsard-yaml/postprocessor-yaml/: postprocessor.ipynb  postprocessor.yaml
demo/petsard-yaml/preprocessor-yaml/: preprocessor_discretizing-custom-k-bins.yaml  preprocessor_discretizing.ipynb  preprocessor_encoder-datediff.yaml  preprocessor_encoder-field-specific.yaml  preprocessor_encoder.ipynb  preprocessor_missing-handling.ipynb  preprocessor_missing-handling.yaml  preprocessor_outlier-field-specific.yaml  preprocessor_outlier-global.yaml  preprocessor_outlier-handling.ipynb  preprocessor_scaler-field-specific.yaml  preprocessor_scaler-time-anchor-scaling.yaml  preprocessor_scaler.ipynb
demo/petsard-yaml/reporter-yaml/: adult-income_constraints.yaml  reporter.ipynb  (+11 more)
demo/tutorial/: default-synthesis-default-evaluation.ipynb  default-synthesis.ipynb  default-synthesis.yaml  external-synthesis-default-evaluation.ipynb  external-synthesis-default-evaluation.yaml
doc_site/: hugo.yaml
doc_site/content/: about.md  about.zh-tw.md
petsard/: adapter.py  config.py  exceptions.py  executor.py  status.py  utils.py
petsard/constrainer/: constrainer.py  constrainer_base.py  field_combination_constrainer.py  field_constrainer.py  field_proportions_constrainer.py  nan_group_constrainer.py
petsard/evaluator/: anonymeter.py  customer_evaluator.py  data_describer.py  data_describer_base.py  describer.py  describer_compare.py  describer_describe.py  evaluator.py  evaluator_base.py  mlutility.py  mlutility_v2.py  mpuccs.py  sdmetrics.py  stats.py  stats_base.py
petsard/loader/: benchmark_datasets.yaml  benchmarker.py  loader.py  loader_pandas.py  splitter.py
petsard/metadater/: __init__.py  data.py  metadata.py  metadater.py  schema_inferencer.py  stats.py
petsard/processor/: __init__.py  base.py  constant.py  encoder.py  mediator.py  registry.py  scaler.py  schema_transform.py
petsard/reporter/: reporter_base.py  reporter_save_data.py  reporter_save_report.py  reporter_save_schema.py  reporter_save_timing.py  reporter_save_validation.py
petsard/synthesizer/: custom_data.py  custom_synthesizer.py  petsard_gaussian_copula.py  sdv.py  synthesizer.py  synthesizer_base.py
tests/: README.md  test_adapter.py  test_config.py  test_executor.py  test_petsard.py  test_status.py
tests/constrainer/: test_constrainer.py  test_constrainer_validate.py  test_field_constrainer.py  test_field_proportions_constrainer.py
tests/describer/: test_describer_compare.py  test_describer_describe.py
tests/evaluator/: test_custom_evaluator.py  test_mlutility.py  test_mlutility_v2.py  test_mpuccs.py
tests/loader/: test_benchmarker.py  test_loader.py  test_splitter.py
tests/metadater/: test_metadater.py
tests/processor/: test_constant_processor.py  test_schema_inferencer.py
tests/reporter/: test_reporter.py  test_reporter_save_schema.py
tests/synthesizer/: test_petsard_gaussian_copula.py  test_synthesizer.py
(+493 files in other folders)
